reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__projections.rs_line_196_col_9.log

*** crates/tracewake-core/src/projections.rs:196:9: replace EmbodiedProjectionSource<'a>::from_sealed_context -> Self with Default::default()

*** mutation diff:
--- crates/tracewake-core/src/projections.rs
+++ replace EmbodiedProjectionSource<'a>::from_sealed_context -> Self with Default::default()
@@ -188,40 +188,17 @@
 }
 
 impl<'a> EmbodiedProjectionSource<'a> {
     pub fn from_sealed_context(
         context: &'a KnowledgeContext,
         snapshot: EmbodiedTruthSnapshot,
         agent_state: Option<&'a AgentState>,
     ) -> Self {
-        let actor_known_food_sources = actor_known_food_sources_for_context(context);
-        let actor_known_sleep_affordances = actor_known_sleep_affordances_for_context(context);
-        let actor_known_routes =
-            actor_known_routes_for_context(context, Some(&snapshot.current_place_id));
-        let actor_known_workplaces = actor_known_workplaces_for_context(context);
-        let actor_known_doors = actor_known_doors_for_context(context);
-        let actor_known_containers = actor_known_containers_for_context(context);
-        let actor_known_items = actor_known_items_for_context(context);
-        let actor_known_local_actors = actor_known_local_actors_for_context(context);
-        Self {
-            agent_state,
-            knowledge_context_id: context.holder_known_context_id().clone(),
-            current_place_id: snapshot.current_place_id,
-            place_label: snapshot.place_label,
-            carried_items: snapshot.carried_items,
-            actor_known_food_sources,
-            actor_known_sleep_affordances,
-            actor_known_routes,
-            actor_known_workplaces,
-            actor_known_doors,
-            actor_known_containers,
-            actor_known_items,
-            actor_known_local_actors,
-        }
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
 }
 
 fn actor_known_food_sources_for_context(
     context: &KnowledgeContext,
 ) -> Vec<ActorKnownFoodSourceSurface> {
     let mut food_sources = context
         .actor_known_food_sources()


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): couldn't read metadata for file `target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib`
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `EmbodiedProjectionSource<'_>: Default` is not satisfied
   --> crates/tracewake-core/src/projections.rs:196:9
    |
196 |         Default::default() /* ~ changed by cargo-mutants ~ */
    |         ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `EmbodiedProjectionSource<'_>`
   --> crates/tracewake-core/src/projections.rs:77:1
    |
 77 | pub struct EmbodiedProjectionSource<'a> {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `projections::EmbodiedProjectionSource<'_>: Default` is not satisfied
   --> crates/tracewake-core/src/projections.rs:196:9
    |
196 |         Default::default() /* ~ changed by cargo-mutants ~ */
    |         ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `projections::EmbodiedProjectionSource<'_>`
   --> crates/tracewake-core/src/projections.rs:77:1
    |
 77 | pub struct EmbodiedProjectionSource<'a> {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
